@@ -61,6 +61,7 @@ Neilen Marais <nmarais@gmail.com>
 Nick Roberts  <nickrob@snap.net.nz>
 Nikolaj Schumacher http://nschum.de/src/emacs/company/
 Patrik Jonsson <code@familjenjonsson.org> 
+Paul Pogonyshev <pogonyshev@gmail.com>
 Reinout van Rees http://reinout.vanrees.org/weblog/2010/05/11/pep8-pyflakes-emacs.html
 Richard Everson <R.M.Everson@exeter.ac.uk>
 Richard Riley http://www.emacswiki.org/emacs/RichardRiley
